# execution-service

./: .env.example  .gitignore  .python-version  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/models/: action.py  goal.py  project.py  time_entry.py  user.py
app/routers/: actions.py  auth.py  goals.py  projects.py  timers.py
app/services/: action_service.py  auth_service.py  goal_service.py  project_service.py  timer_service.py
app/utils/: auth.py  slug.py
scripts/: README.md  debug_content.py  drop_user_data.py  migrate.py  sync.py
tests/: conftest.py  test_connection.py  test_models.py
tests/integration/: test_action_endpoints.py  test_auth_endpoints.py  test_goal_endpoints.py  test_project_endpoints.py  test_timer_endpoints.py
tests/unit/: test_action_service.py  test_auth.py  test_auth_service.py  test_goal_service.py  test_project_service.py  test_slug.py  test_timer_service.py
